test/classes/initializers/siblingCall/middleBad.good
middleBad.chpl:5: In initializer:
middleBad.chpl:6: error: field initialization not allowed before super.init() or this.init()
